fix badge z-index

--- a/src/components/BasketBadge/BasketBadge.module.scss
+++ b/src/components/BasketBadge/BasketBadge.module.scss
@@ -4,7 +4,7 @@
 	position: fixed;
 	right: 50px;
 	top: 100px;
-	z-index: 8;
+	z-index: 2;
 
 	display: flex;
 	align-items: center;
