--- a/src/components/Splide/Splide.module.scss
+++ b/src/components/Splide/Splide.module.scss
@@ -8,7 +8,7 @@
 	background-color: $secondary-bg-color;
 }
 
-p{
+.splideTest{
 	display: flex;
 	align-items: center;
 }
