--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 15px 0;
+  padding: 20px 0;
   background-color: rgba(0, 0, 0, 0.297);
 
 }
