--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -70,7 +70,7 @@
   transition: all 0.4s ease;
 
   &.showMob {
-    z-index: 1;
+    z-index: 5;
     opacity: 1;
   }
 }
