--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -3,6 +3,10 @@
 .inner_wrapper {
   padding-top: 100px;
   padding-bottom: 100px;
+  @media screen and (max-width: 767px) {
+	padding-bottom: 40px;
+  }
+
 }
 
 .title {
