--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -4,7 +4,7 @@
 .buy {
 	display: inline-block;
 	text-decoration: none;
-	padding: 13px 13px;
+	padding: 13px 18px;
 	border: none;
 	border-radius: 60px;
 
